--- a/lib/hyacinth_web/live/label_session_live/show.html.heex
+++ b/lib/hyacinth_web/live/label_session_live/show.html.heex
@@ -10,15 +10,15 @@
       <%= @label_session.job.name %>
     </:crumb>
     <:crumb label="Session" to={Routes.live_path(@socket, HyacinthWeb.LabelSessionLive.Show, @label_session)}>
-      <%= @label_session.user.email %>
+      <%= @label_session.user.name %>'s Session
     </:crumb>
   </.breadcrumbs>
 
   <div class="mt-2 flex justify-between items-start">
     <div>
       <div class="flex items-center space-x-3">
-        <h1>Labeling Session</h1>
-        <div class="mt-2">
+        <h1><%= @label_session.user.name %>'s Session</h1>
+        <div>
           <%= case @label_session.job.type do %>
             <% :classification -> %>
               <div class="pill pill-lg pill-green">Classification Session</div>
@@ -28,17 +28,22 @@
         </div>
       </div>
 
-      <h2 class="mt-2 text-gray-400">
-        <div class="flex items-center space-x-1">
-          <span class="mt-0.5 text-gray-500"><Icons.briefcase_mini /></span>
-          <span><%= @label_session.job.name %></span>
-        </div>
+      <div class="mt-3 flex items-center space-x-2">
+        <.header_tag>
+          <:icon><Icons.rectangle_stack_mini /></:icon>
+          <:text><%= @label_session.job.name %></:text>
+        </.header_tag>
 
-        <div class="flex items-center space-x-1">
-          <span class="mt-0.5 text-gray-500"><Icons.user_circle_mini /></span>
-          <span><%= @label_session.user.email %></span>
-        </div>
-      </h2>
+        <.header_tag>
+          <:icon><Icons.user_circle_mini /></:icon>
+          <:text><%= @label_session.user.name %></:text>
+        </.header_tag>
+
+        <.header_tag>
+          <:icon><Icons.photo_mini /></:icon>
+          <:text><%= length(@label_session.elements) %> <%= elements_name(@label_session.elements) %></:text>
+        </.header_tag>
+      </div>
     </div>
 
     <div class="shrink-0">
@@ -50,10 +55,9 @@
   </div>
 </header>
 
-<main class="mt-5">
-  <div class="mt-4">
-    <div class="ml-1 text-lg text-gray-300"><%= length(@label_session.elements) %> <%= elements_name(@label_session.elements) %></div>
-    <div class="mt-2 border border-gray-700 rounded">
+<main class="mt-6">
+  <div>
+    <div class="border border-gray-700 rounded">
       <table class="mt-1 w-full table">
         <thead>
           <tr>
