--- a/lib/hyacinth_web/live/pipeline_live/show.html.heex
+++ b/lib/hyacinth_web/live/pipeline_live/show.html.heex
@@ -9,14 +9,29 @@
   </.breadcrumbs>
 
   <div class="w-full flex justify-between items-center">
-    <h1><%= @pipeline.name %></h1>
-    <div class="">
-      <.form let={f} for={@run_pipeline_changeset} phx-submit="run_pipeline_submit">
-        <div class="filter-form-content space-x-4">
-          <%= select f, :dataset_id, Enum.map(@datasets, &({&1.name, &1.id})), prompt: "Choose a Dataset" %>
-          <%= submit "Run Pipeline", class: "btn btn-blue" %>
-        </div>
-      </.form>
+    <div class="flex items-center space-x-3">
+      <h1><%= @pipeline.name %></h1>
+      <div>
+        <%= if Enum.any?(@pipeline.runs, &(&1.status == :running)) do %>
+          <div class="pill pill-lg pill-yellow">Running</div>
+        <% else %>
+          <%= case length(@pipeline.runs) do %>
+          <% 0 -> %>
+            <div class="pill pill-lg pill-gray">0 runs</div>
+          <% 1 -> %>
+            <div class="pill pill-lg pill-green">1 run</div>
+          <% num_runs -> %>
+            <div class="pill pill-lg pill-green"><%= num_runs %> runs</div>
+          <% end %>
+        <% end %>
+      </div>
+    </div>
+
+    <div>
+      <button class="btn btn-icon btn-blue" phx-click="open_modal_run_pipeline">
+        <Icons.plus_small_solid />
+        <span>Run Pipeline</span>
+      </button>
     </div>
   </div>
 
@@ -89,3 +104,24 @@
     </div>
   <% end %>
 </main>
+
+<%= case @modal do %>
+<% {:run_pipeline, changeset} -> %>
+<.modal>
+  <:header>Run Pipeline</:header>
+
+  <div class="mt-2">
+    <.form let={f} for={changeset} phx-change="run_pipeline_form_change" phx-submit="run_pipeline_form_submit">
+      <div class="form-content">
+        <p>
+          <%= label f, :dataset_id %>
+          <%= select f, :dataset_id, Enum.map(@datasets, &({&1.name, &1.id})), prompt: "Choose a Dataset" %>
+          <%= error_tag f, :dataset_id %>
+        </p>
+        <%= submit "Run", class: "btn btn-blue" %>
+      </div>
+    </.form>
+  </div>
+</.modal>
+<% nil -> %>
+<% end %>
