--- a/lib/hyacinth_web/live/label_job_live/show.html.heex
+++ b/lib/hyacinth_web/live/label_job_live/show.html.heex
@@ -28,6 +28,23 @@
     <% end %>
   </div>
 
+  <div class="mt-2 flex items-center space-x-2">
+    <.header_tag tooltip="Dataset">
+      <:icon><Icons.rectangle_stack_mini /></:icon>
+      <:text><%= @job.dataset.name %></:text>
+    </.header_tag>
+
+    <.header_tag tooltip="Created by">
+      <:icon><Icons.user_circle_mini /></:icon>
+      <:text><%= @job.created_by_user.name %></:text>
+    </.header_tag>
+
+    <.header_tag>
+      <:icon><Icons.photo_mini /></:icon>
+      <:text><%= length(@job.blueprint.elements) %> <%= elements_name(@job.blueprint.elements) %></:text>
+    </.header_tag>
+  </div>
+
   <div class="mt-4 text-xl border-b-2 border-gray-700">
     <div class="-mb-0.5">
       <.tab_button cur_tab={@tab} event="set_tab" tab="sessions">Sessions</.tab_button>
