--- a/lib/hyacinth_web/live/label_job_live/show.html.heex
+++ b/lib/hyacinth_web/live/label_job_live/show.html.heex
@@ -19,6 +19,8 @@
           <div class="pill pill-lg pill-green">Classification Job</div>
         <% :comparison_exhaustive -> %>
           <div class="pill pill-lg pill-blue">Comparison Job</div>
+        <% :comparison_mergesort -> %>
+          <div class="pill pill-lg pill-blue">Comparison Job</div>
       <% end %>
     </div>
 
