--- a/lib/hyacinth_web/live/label_session_live/show.html.heex
+++ b/lib/hyacinth_web/live/label_session_live/show.html.heex
@@ -79,7 +79,7 @@
       </div>
 
       <div>
-        <%= link "Export", to: Routes.export_labels_path(@socket, :show, @label_session), class: "btn btn-blue" %>
+        <button class="btn btn-blue" phx-click="open_modal_export_labels">Export</button>
       </div>
     </div>
 
@@ -121,3 +121,31 @@
     </div>
   </div>
 </main>
+
+<%= case @modal do %>
+  <% {:export_labels,  export_labels_changeset} -> %>
+    <.modal size="sm">
+      <:header>Export Labels</:header>
+
+      <div class="mt-6">
+        <.form let={f} for={export_labels_changeset} phx-change="export_labels_change" phx-submit="export_labels_submit">
+          <div class="form-content">
+            <p>
+              <%= label f, :timestamp_columns %>
+              <%= select f, :timestamp_columns, [{"ISO", :iso}, {"UNIX", :unix}, {"ISO and UNIX", :iso_and_unix}] %>
+              <%= error_tag f, :timestamp_columns %>
+            </p>
+
+            <p>
+              <%= label f, :object_columns %>
+              <%= select f, :object_columns, humanize_enum(ExportLabelsForm, :object_columns) %>
+              <%= error_tag f, :object_columns %>
+            </p>
+
+            <%= submit "Export", class: "btn btn-blue" %>
+          </div>
+        </.form>
+      </div>
+    </.modal>
+  <% nil -> %>
+<% end %>
