--- a/lib/hyacinth_web/live/label_session_live/show.html.heex
+++ b/lib/hyacinth_web/live/label_session_live/show.html.heex
@@ -14,7 +14,7 @@
     </:crumb>
   </.breadcrumbs>
 
-  <div class="mt-2 flex justify-between items-start">
+  <div class="flex justify-between items-center">
     <div>
       <div class="flex items-center space-x-3">
         <h1><%= @label_session.user.name %>'s Session</h1>
