--- a/lib/hyacinth_web/live/pipeline_run_live/show.html.heex
+++ b/lib/hyacinth_web/live/pipeline_run_live/show.html.heex
@@ -11,7 +11,7 @@
     </:crumb>
   </.breadcrumbs>
 
-  <div class="mt-2">
+  <div>
     <div class="flex items-center space-x-3">
       <h1>Pipeline Run</h1>
       <div>
