--- a/lib/hyacinth_web/live/label_session_live/label.html.heex
+++ b/lib/hyacinth_web/live/label_session_live/label.html.heex
@@ -53,30 +53,21 @@
 <main class="mt-4">
   <div class="flex justify-center items-start space-x-12">
     <div class="flex space-x-6">
-      <%= for {{object, label_val}, i} <- @element.objects |> Enum.zip(@object_label_options) |> Enum.with_index() do %>
+      <%= for {{object, label_value}, i} <- @element.objects |> Enum.zip(@object_label_options) |> Enum.with_index() do %>
         <div class="w-full">
           <div class="flex items-center space-x-2">
-            <div class="flex-1 px-2 py-1.5 text-gray-400 bg-gray-800 rounded border border-gray-700">
+            <div class={[
+              "flex-1 px-2 py-2 rounded border",
+              if(label_value && label_value == @current_value,
+                do: "text-gray-300 font-medium bg-blue-900 border-blue-700",
+                else: "text-gray-400 bg-gray-800 border-gray-700"
+              )
+            ]}>
               <div class="flex items-center">
                 <Icons.photo_solid />
                 <span class="ml-2"><%= object.name %></span>
               </div>
             </div>
-
-            <%= if label_val do %>
-              <button
-                class="btn btn-blue flex items-center"
-                phx-click="set_label"
-                phx-value-label={label_val}
-              >
-                <span class={["rounded-full bg-black bg-opacity-10 border-2 border-black", label_val != @current_value && "border-opacity-30"]}>
-                  <span class={label_val == @current_value || "opacity-0"}>
-                    <Icons.check_circle_mini />
-                  </span>
-                </span>
-                <span class="ml-2"><%= label_val %></span>
-              </button>
-            <% end %>
           </div>
 
           <div class="mt-2">
@@ -117,18 +108,25 @@
       <div class="mt-4">
         <div class="text-sm text-gray-400 font-medium">Label Options</div>
         <div class="mt-1 space-y-2 flex flex-col">
-          <%= for {label_val, selected} <- Enum.map(@label_session.job.label_options, fn lv -> {lv, lv == @current_value} end) do %>
+          <%= for label_value <- (LabelJobType.list_object_label_options(@label_session.job.type, @label_session.job.options) || []) ++ @label_session.job.label_options do %>
             <button
-              class="btn btn-lg btn-blue !px-2 flex items-center"
+              class="btn btn-lg btn-icon btn-blue flex items-center"
               phx-click="set_label"
-              phx-value-label={label_val}
+              phx-value-label={label_value}
             >
-              <span class={["rounded-full bg-black bg-opacity-10 border-2 border-black", !selected && "border-opacity-30"]}>
-                <span class={selected || "opacity-0"}>
-                  <Icons.check_circle_mini />
-                </span>
+              <span>
+                <%= if label_value == @current_value do %>
+                  <span>
+                    <Icons.check_circle_solid />
+                  </span>
+                <% else %>
+                  <div class="w-6 h-6 flex justify-center items-center">
+                    <div class="w-5 h-5 rounded-full border border-black bg-black bg-opacity-10" />
+                  </div>
+                <% end %>
               </span>
-              <span class="ml-2"><%= label_val %></span>
+
+              <span><%= label_value %></span>
             </button>
           <% end %>
         </div>
