--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -84,6 +84,19 @@ h3 {
 }
 
 
+.text-btn {
+    @apply px-1 font-medium rounded focus:ring-2 focus:outline-none;
+}
+
+.text-btn-blue {
+    @apply text-blue-300 hover:text-blue-400 focus:ring-blue-400 focus:ring-blue-500;
+}
+
+.text-btn-icon {
+    @apply space-x-1 flex items-center;
+}
+
+
 /* Cards */
 
 .card {
@@ -198,7 +211,7 @@ h3 {
 }
 
 .form-content button[type='submit'] {
-    @apply mt-4 btn btn-blue;
+    @apply !mt-6 btn btn-blue;
 }
 
 .form-wide p {
