--- a/lib/hyacinth_web/live/label_session_live/show.html.heex
+++ b/lib/hyacinth_web/live/label_session_live/show.html.heex
@@ -79,7 +79,10 @@
       </div>
 
       <div>
-        <button class="btn btn-blue" phx-click="open_modal_export_labels">Export</button>
+        <button class="text-btn text-btn-blue text-btn-icon" phx-click="open_modal_export_labels">
+          <span>Export</span>
+          <Icons.pencil_square_mini />
+        </button>
       </div>
     </div>
 
@@ -124,12 +127,18 @@
 
 <%= case @modal do %>
   <% {:export_labels,  export_labels_changeset} -> %>
-    <.modal size="sm">
+    <.modal size="xs">
       <:header>Export Labels</:header>
 
-      <div class="mt-6">
+      <div class="mt-2">
         <.form let={f} for={export_labels_changeset} phx-change="export_labels_change" phx-submit="export_labels_submit">
           <div class="form-content">
+            <p>
+              <%= label f, :include_labels %>
+              <%= select f, :include_labels, humanize_enum(ExportLabelsForm, :include_labels) %>
+              <%= error_tag f, :include_labels %>
+            </p>
+
             <p>
               <%= label f, :timestamp_columns %>
               <%= select f, :timestamp_columns, [{"Date/Time (ISO)", :iso}, {"UNIX", :unix}, {"Date/Time (ISO) and UNIX", :iso_and_unix}] %>
