Add description to PipelineLive.New

--- a/lib/hyacinth_web/live/pipeline_live/new.html.heex
+++ b/lib/hyacinth_web/live/pipeline_live/new.html.heex
@@ -12,6 +12,12 @@
             <%= text_input f, :name, placeholder: "My Pipeline" %>
             <%= error_tag f, :name %>
           </p>
+
+          <p>
+            <%= label f, :description %>
+            <%= textarea f, :description, placeholder: "A very cool pipeline." %>
+            <%= error_tag f, :description %>
+          </p>
         </div>
       </div>
 
