--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -52,6 +52,20 @@ h3 {
     @apply focus:outline-none;
 }
 
+.btn-yellow {
+    @apply text-black font-medium;
+    @apply bg-yellow-300 hover:bg-yellow-400;
+    @apply focus:ring-yellow-200 focus:hover:ring-yellow-300;
+    @apply focus:outline-none;
+}
+
+.btn-green {
+    @apply text-black font-medium;
+    @apply bg-green-400 hover:bg-green-500;
+    @apply focus:ring-green-300 focus:hover:ring-green-400;
+    @apply focus:outline-none;
+}
+
 .btn-dark-blue {
     @apply text-blue-50 font-medium;
     @apply bg-blue-700 hover:bg-blue-600;
